--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <button class="start" id="start" onclick="startGame()">Start Game</button>
    
     <section class="cardsOnTable" id="cardsOnTable">
         <div class="playerHiddenCards" id="playerHiddenCards">
@@ -41,7 +42,7 @@
             <div class="card" data-card="17" id="eCard5"></div>
             <div class="card" data-card="18" id="eCard6"></div>
         </div> 
-        <div class="deck" id="deck" onclick="startGame()">
+        <div class="deck" id="deck" onclick="">
         </div>    
            
         <div class="cardCounter" id="cardCounter">
