--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="body">
-    <button class="start" id="start" onclick="startGame()">Start Game</button>
+    <div class="enterName" id="enterName"> 
+     <h2>Hello! Welcome to ShitHead game
+        <input class="nameInput" id="nameInput" type="text" placeholder="Enter Name...">
+        <button class="nameButton" id="nameButton" onclick="startGame()">Start</button>
+    </div>
     <div class="PlayerName" id="PlayerName"></div>
     <div class="EnemyName" id="EnemyName">Jason</div>
     <section class="cardsOnTable" id="cardsOnTable">
